--- a/src/components/boundary-extraction/templete.html
+++ b/src/components/boundary-extraction/templete.html
@@ -32,4 +32,6 @@
     <div class="contentDiv transformDiv">
         <canvas ref="myCanvas3"></canvas>
     </div>
+
+    <img src="../../assets/ex3.png" style="display: none;" id="defaultImg" alt="">
 </div>
