--- a/src/components/perspective/templete.html
+++ b/src/components/perspective/templete.html
@@ -38,4 +38,6 @@
     <div class="contentDiv transformDiv">
         <canvas ref="myCanvas2"></canvas>
     </div>
+
+    <img src="../../assets/ex1.jpg" style="display: none;" id="defaultImg" alt="">
 </div>
