--- a/src/components/region-filling/templete.html
+++ b/src/components/region-filling/templete.html
@@ -35,4 +35,6 @@
     <div class="contentDiv transformDiv">
         <canvas ref="myCanvas4"></canvas>
     </div>
+
+    <img src="../../assets/ex4.jpg" style="display: none;" id="defaultImg" alt="">
 </div>
