--- a/src/components/unsharp-masking/templete.html
+++ b/src/components/unsharp-masking/templete.html
@@ -30,4 +30,6 @@
     <div class="contentDiv" id="controlDiv">
         <button id="unsharp" @click="next">transform</button>
     </div>
+
+    <img src="../../assets/ex2.jpg" style="display: none;" id="defaultImg" alt="">
 </div>
